--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "dot-env": "^0.0.1",
+    "history": "^5.0.0",
     "numeral": "^2.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
