--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "dot-env": "^0.0.1",
+    "formik": "^2.2.6",
     "history": "^5.0.0",
     "numeral": "^2.0.6",
     "react": "^16.13.1",
@@ -22,7 +23,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
