--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "date-fns": "^2.16.1",
     "dot-env": "^0.0.1",
     "formik": "^2.2.6",
     "history": "^5.0.0",
